assets/style/style.css
@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

:root{
    --primary-font: "Dancing Script", sans-serif;
    --secondary-font: "Playfair Display", cursive;
    --primary-color: #3E2723; 
    --secondary-color: #4B382A; 
    --highlight-color: #D5B895; 
}

body{
    background-color: bisque;
}

nav{
    background-color: #D1B280;
}

a.navbar-brand{
    font-family: var(--primary-font); 
    font-size: 180%;
}

a.nav-link{
    color: #4B382A;
    font-family: var(--primary-font);
    font-size: 140%;
}

.custom-button-filled {
    border: 2px solid var(--primary-color);
    background-color: #D1B280;
    font-family: var(--primary-font);
    color: rgb(0, 0, 0);
}

/*Header*/

div.modal-body,
div.modal-header{
 background-color:rgb(211, 164, 108) ;
}

div.modal-header{
    padding: 0 10px;
}

#exampleInputEmail1.form-control,
#exampleInputFullname1.form-control{
    background-color:rgb(230, 175, 113) ;
    border: 1px solid rgb(0, 0, 0) ;
}

h1,
h2,
h3,
h5 {
    font-family: var(--secondary-font);
    color: var(--primary-color);
}

h1,
h2,
h5 {
    text-transform: uppercase;
}

h2 {
    margin-bottom: 2rem;
}

.img{
    background: url("/assets/img/Beige_Brown_Creative_Circle_Coffe_Shop_Logo-removebg-preview.png") no-repeat center center/cover;
    width: 400px;
    height: 270px;
    margin: auto;
}

header{
    
    margin-top: 50px;
    margin-bottom: 100px;
}

/*Main*/

/*About*/
main img{
    display: flex;
    margin: auto;
}

#About{
    margin-bottom: 200px;
}

/*Menu*/

#Menu{
    margin-bottom: 150px;
}

 .card:hover,
 #Gallery img:hover,
 #reviews div.col:hover {
        transform: scale(1.05);
        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
        }

  .card-img-top  {
        border-radius: 10px 10px 0 0;
        }

div.card{
    min-height: 424px;
    border: 1px solid rgb(221, 193, 52);
    }

.card-title {
    font-weight: bold;
    font-size: 1.5rem;
    color: #5C4033; /* A warm coffee-like color */
    }
  
  .card-text 
  {
    font-size: 1rem;
    color: #6F4F4B; /* Coffee brown */
    line-height: 1.5;
  }
  
 #Menu button 
 {
    background-color: #5C4033; /* Same coffee-like color */
    color: white;
    border-radius: 5px;
    font-weight: bold;
  }
  
  #Menu button:hover 
  {
    background-color: #3E2C2A; /* Darker brown shade */
    cursor: pointer;
  }


    

    






/*Product*/
#Product{
    margin-bottom: 100px;
}
#Product div.card button{
    margin-top: 20px;
    
}

/*Gallery*/
#Gallery{
    margin-bottom: 100px;
}
#Gallery img{
    border-radius: 20px;
}

/*Reviews*/

#reviews div.col{
    border: 2px solid #c8a165;
    background-color: #e7d788;
    border-radius: 20px;
    width: 400px;
    height: 300px;
    margin-right: 25px;
   
}

.pointer i{
    font-size:400%;
    color: black;
    padding: 50px 10px;
}

/*Footer*/

footer{
    background-color: #D1B280;
    padding: 0;
    margin: 0;
    width: 100%;
}

.social i {
    font-size: 200%;
    margin-right: 10px;
    color: black;
}

tr td{
    border: 1px solid white;
}

th{
    border: 1px solid white;
}


@media screen and (max-width: 768px) 
{
    main img{
        width:100%;
        margin-bottom: 30px;
    }

    div.img{
        width: 70%;
    }

    #About p{
        text-align: center;
        
        margin-bottom: 20px;
    }

    div.card{
        margin: auto;
    }

    #reviews div.col{
        margin: auto;
    }
    
    .pointer i{
        display: none;
    }
   
}

@media screen and (min-width: 768px) and (max-width: 1199px) 
{
    #header button{
        margin: 20px 0;
    }  
    
    #About{
        margin-bottom: 100px;
    }

    #Menu{
        margin-bottom: 100px;
    }
    
    #reviews div.col{
        margin: auto;
        
    }

   
   
    
}



@media screen and (max-width: 1400px) {

    main img{
       
        margin-bottom: 30px;
    }

    
#About p{
    text-align: center;
    margin: auto;
    margin-bottom: 20px;
}


}

@media screen and (min-width: 1400px){

    #About p{
        padding-left: 65px;
    }
}

